# baresip-ios

./: .gitignore  CMakeLists.txt  CMakePresets.json  Package.swift  README.md  notes.txt
cmake/: ios.toolchain.cmake
